# pennywise

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/migrations/: 20240101000001_create_users.sql  20240101000002_create_transactions.sql  20240101000003_create_budgets.sql  20240101000004_create_tasks.sql  20240101000005_create_wallets.sql  20240101000006_add_wallet_to_transactions.sql
backend/src/: config.rs  db.rs  errors.rs  main.rs
backend/src/handlers/: auth.rs  budgets.rs  dashboard.rs  mod.rs  tasks.rs  transactions.rs  wallets.rs
backend/src/middleware/: auth.rs
backend/src/models/: budget.rs  mod.rs  task.rs  transaction.rs  user.rs  wallet.rs
backend/src/repositories/: budget.rs  mod.rs  task.rs  transaction.rs  user.rs  wallet.rs
backend/src/services/: auth.rs  budgets.rs  mod.rs  transactions.rs
docs/: TUTORIAL_EDIT_PROFILE.md
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/api/: client.ts
frontend/src/lib/components/: BalanceCard.svelte  BottomNav.svelte  BudgetCategoryCard.svelte  BudgetCircle.svelte  BudgetForm.svelte  EmptyState.svelte  FAB.svelte  FilterChips.svelte  LoadingSpinner.svelte  Navbar.svelte  SearchBar.svelte  SummaryCard.svelte  TaskCard.svelte  TaskDrawer.svelte  Toast.svelte  TransactionForm.svelte  TransactionItem.svelte  WalletCard.svelte  WalletForm.svelte  WeeklyChart.svelte
frontend/src/lib/services/: tasks.ts
frontend/src/routes/: +layout.svelte  +page.svelte
(+22 files in other folders)
